# my_learnt

./: README.md
DisplayVideo/: .gitignore  CMakeLists.txt  README.md  displayvideo.cpp  displayvideo.h  displayvideo.ui  main.cpp  qss.qrc  videocontrolbar.cpp  videocontrolbar.h  videocontrolbar.ui
DisplayVideo/qss/: sound_slider.qss
myMuduo/: .gitignore  CMakeLists.txt  days.txt
myMuduo/include/: Accepter.hpp  Buffer.hpp  CallbackFunction.hpp  Channel.hpp  CurrentThread.hpp  EPollPoller.hpp  EventLoop.hpp  EventLoopThread.hpp  EventLoopThreadPool.hpp  InetAddress.hpp  Logger.hpp  Poller.hpp  Socket.hpp  TcpConnection.hpp  TcpServer.hpp  Thread.hpp  TimeStamp.hpp  noncopyable.hpp
myMuduo/src/: Buffer.cc  CMakeLists.txt  Channel.cc  DefaultPoller.cc  EPollPoller.cc  EventLoop.cc  Poller.cc  TcpConnection.cc  TcpServer.cc  test  test.cc
my_learn_qml/: .gitignore  CMakeLists.txt  CMakeLists.txt.iaKCTQ  Main.qml  README.md  main.cpp  source.qrc
my_learn_qml/day01/: ChangeColorRect.qml  ChooseImageDisplay.qml  KeyMoveText.qml  MySignal.qml  startTimer.qml
my_learn_qml/day02/: ColorPicker.qml  ComponentFile.qml  CreateControls.qml  CreateControls2.qml  LoaderTest.qml  LoaderTestFileInput.qml  LoaderTestFileInput2.qml  PinchPhone.qml  day02.md
my_learn_qml/day03/: ComboboxDemo.qml  MyCombobox.qml  MyProgressBar.qml  PreferredMobiesCheckBox.qml  PreferredMobileOs.qml  PreferredMovies.qml  PreferredRadioButton.qml  ProgressBarDemo.qml  day03.md
my_learn_qml/day04/: FlickableDemo.qml  MyStackView.qml  MyTabView.qml  SliderDemo.qml  TabViewSimple.qml  day04.md
my_learn_qml/day05/: AuthCodeItem.qml  CanvasClipDemo.qml  CanvasFilesDemo.qml  CanvasFilesDemoButton.qml  CanvasTransform.qml  day05.md  keybackquit.cpp  keybackquit.h  验证码控件.md
my_learn_qml/day06/: CallQmlDemo.qml  ColorMakerDemo.qml  ImageProcessorButton.qml  ImageProcessorDemo.qml  changeqmlcolor.cpp  changeqmlcolor.h  colormaker.cpp  colormaker.h  day06.md  imageprocessor.cpp  imageprocessor.h
my_learn_qml/day07/: Bubbleshot.qml  ColorAnimationRedToGreen.qml  NumberAnimationSquareToCircle.qml  ParentChangeDemo.qml  PathAnimationDemo.qml  PropertAnimationStandalone.qml  PropertyAnimationSwap.qml  RotationAnimationDemo.qml  SequentialAnimationDemo.qml  SmoothedAnimationDemo.qml  SpringAnimationDemo.qml  StateDemo.qml  TransitionRectDemo.qml
my_learn_qml/day08/: FindImageDemo.qml  FlatButton.qml  ImageDigger.qml  LocalViewer.qml  PhoneListDeletage.qml  PhoneListItemText.qml  PhoneListViewDemo.qml  PhoneTableSimple.qml  TableModel.md  VideoListViewText.qml  VideoListXml.qml  day08.md  tablemodel.cpp  tablemodel.h  videolistmodel.cpp  videolistmodel.h
my_learn_qml/day09/: FileReaderDemo.qml  SimpleCameraDemo.qml  SimpleMusic.qml
